fix     | sprint1 | 없음  | JWT 토큰 검증 로직 수정    | RAFA

--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,42 +1,82 @@
+/**
+ * API Gateway 프로젝트 빌드 설정 파일
+ * 
+ * 이 파일은 API Gateway 프로젝트의 의존성, 플러그인, 빌드 설정을 정의합니다.
+ * Spring Cloud Gateway 기반의 마이크로서비스 아키텍처에서 사용됩니다.
+ */
+
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'java'  // Java 플러그인
+	id 'org.springframework.boot' version '3.5.4'  // Spring Boot 플러그인
+	id 'io.spring.dependency-management' version '1.1.7'  // Spring 의존성 관리 플러그인
 }
 
-group = 'com.deefacto'
-version = '0.0.1-SNAPSHOT'
+// 프로젝트 기본 정보
+group = 'com.deefacto'  // 그룹 ID
+version = '0.0.1-SNAPSHOT'  // 프로젝트 버전
 
+// Java 버전 설정
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+		languageVersion = JavaLanguageVersion.of(17)  // Java 17 사용
 	}
 }
 
+// Maven 저장소 설정
 repositories {
-	mavenCentral()
+	mavenCentral()  // Maven Central 저장소 사용
 }
 
+// Spring Cloud 버전 설정
 ext {
-	set('springCloudVersion', "2025.0.0")
+	set('springCloudVersion', "2025.0.0")  // Spring Cloud 2025.0.0 버전 사용
 }
 
+// 프로젝트 의존성 정의
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// =============================================================================
+	// Spring Boot 및 Spring Cloud Gateway 관련 의존성
+	// =============================================================================
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'  // 모니터링 및 관리 기능
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'  // API Gateway 기능
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'  // 비동기 웹 프레임워크
+	
+	// =============================================================================
+	// JWT 토큰 처리 관련 의존성
+	// =============================================================================
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'  // JWT API (컴파일 타임)
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'   // JWT 구현체 (런타임)
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3' // JWT JSON 처리 (런타임)
+	
+	// =============================================================================
+	// 개발 도구 및 코드 생성 관련 의존성
+	// =============================================================================
+	compileOnly 'org.projectlombok:lombok'  // Lombok (컴파일 타임에만 필요)
+	annotationProcessor 'org.projectlombok:lombok'  // Lombok 어노테이션 프로세서
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'  // 개발 도구 (자동 재시작 등)
+	
+	// =============================================================================
+	// 환경 변수 관리 관련 의존성
+	// =============================================================================
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'  // .env 파일 자동 로드
+	
+	
+	// =============================================================================
+	// 테스트 관련 의존성
+	// =============================================================================
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Spring Boot 테스트
+	testImplementation 'io.projectreactor:reactor-test'  // WebFlux 테스트
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'  // JUnit 5 런처
 }
 
+// Spring Cloud 의존성 관리
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"  // Spring Cloud BOM
 	}
 }
 
+// 테스트 설정
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform()  // JUnit 5 플랫폼 사용
 }
